--- a/ResearchKit/Localized/en.lproj/ResearchKit.strings
+++ b/ResearchKit/Localized/en.lproj/ResearchKit.strings
@@ -416,6 +416,11 @@
 "TREMOR_SKIP_RIGHT_HAND" = "I cannot perform this activity with my RIGHT hand.";
 "TREMOR_SKIP_NEITHER" = "I can perform this activity with both hands.";
 
+/* Implicit Association active task. */
+"IMPLICIT_ASSOCIATION_ITEM_DIVIDER" = "or";
+"IMPLICIT_ASSOCIATION_HINT_LABEL_1" = "If you make a mistake, a red";
+"IMPLICIT_ASSOCIATION_HINT_LABEL_2" = "will appear. Press the other key to continue.";
+
 /* Potentially user visible error messages. */
 "ERROR_DATALOGGER_CREATE_FILE" = "Could not create file";
 "ERROR_DATALOGGER_COULD_NOT_FREE_SPACE" = "Could not remove sufficient log files to reach threshold";
