adjusting instruction items label

--- a/ResearchKit/Localized/en.lproj/ResearchKit.strings
+++ b/ResearchKit/Localized/en.lproj/ResearchKit.strings
@@ -447,11 +447,11 @@
 "IMPLICIT_ASSOCIATION_ITEM_DIVIDER" = "or";
 "IMPLICIT_ASSOCIATION_HINT_LABEL_1" = "If you make a mistake, a red";
 "IMPLICIT_ASSOCIATION_HINT_LABEL_2" = "will appear. Press the other key to continue.";
-"IMPLICIT_ASSOCIATION_LEFT" = "left";
-"IMPLICIT_ASSOCIATION_RIGHT" = "right";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_LEFT_LABEL" = " left ";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_RIGHT_LABEL" = " right ";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_LABEL_1" = "Put a";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_LABEL_2" = "finger on the";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_LABEL_3" = "button key for items that belong to the category";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_LABEL_3" = "button for items that belong to the category";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_COMBINED_LABEL_1" = "Use the";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_COMBINED_LABEL_2" = "button for";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_COMBINED_LABEL_3" = "and for";
