--- a/ResearchKit/Localized/en.lproj/ResearchKit.strings
+++ b/ResearchKit/Localized/en.lproj/ResearchKit.strings
@@ -447,20 +447,15 @@
 "IMPLICIT_ASSOCIATION_ITEM_DIVIDER" = "or";
 "IMPLICIT_ASSOCIATION_HINT_LABEL_1" = "If you make a mistake, a red";
 "IMPLICIT_ASSOCIATION_HINT_LABEL_2" = "will appear. Press the other key to continue.";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_LEFT_LABEL" = " left ";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_RIGHT_LABEL" = " right ";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_LABEL_1" = "Put a";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_LABEL_2" = "finger on the";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_LABEL_3" = "button for items that belong to the category";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_COMBINED_LABEL_1" = "Use the";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_COMBINED_LABEL_2" = "button for";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_COMBINED_LABEL_3" = "and for";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_LEFT_LABEL" = "left";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_RIGHT_LABEL" = "right";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_LABEL" = "Put a %@ finger on the %@ button for items that belong to the category %@.";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_COMBINED_LABEL" = "Use the %@ button for %@ and for %@.";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_EACH_LABEL" = "Each item belongs to only one category.";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_PREVIOUS_LABEL" = "This is the same as the previous part.";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_APPEAR_LABEL" = "Items will appear one at a time.";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_WATCH_LABEL" = "Watch out, the labels have changed position!";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_GO_LABEL_1" = "Go as fast as you can";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_GO_LABEL_2" = " while being accurate";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_GO_LABEL" = "Go as fast as you can while being accurate.";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_START_LABEL_1" = "Tap";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_START_LABEL_BUTTON" = " any button ";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_START_LABEL_2" = "when you are ready to start.";
