--- a/ResearchKit/Localized/en.lproj/ResearchKit.strings
+++ b/ResearchKit/Localized/en.lproj/ResearchKit.strings
@@ -508,7 +508,7 @@
 "IMPLICIT_ASSOCIATION_INTRODUCTION_TEXT_LABEL" = "Next, you will use a left and a right button to categorize items into groups as fast as you can. These are the four groups and the items that belong to each:";
 "IMPLICIT_ASSOCIATION_INTRODUCTION_PARTS_LABEL" = "There are seven parts. The instructions change for each part. Pay attention!";
 "IMPLICIT_ASSOCIATION_ITEM_DIVIDER" = "or";
-"IMPLICIT_ASSOCIATION_HINT_LABEL" = "If you make a mistake, a red <attention>X</attention> will appear. Press the other key to continue.";
+"IMPLICIT_ASSOCIATION_HINT_LABEL" = "If you make a mistake, a red <attention>X</attention> will appear. Tap the other button to continue.";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_LEFT_LABEL" = "left";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_RIGHT_LABEL" = "right";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_CONCEPTS_BLOCK1_LABEL" = "Put a %@ finger on the <bold>%@</bold> button for items that belong to the category <concept>%@</concept>.";
