--- a/ResearchKit/Localized/de.lproj/ResearchKit.strings
+++ b/ResearchKit/Localized/de.lproj/ResearchKit.strings
@@ -586,24 +586,30 @@
 
 /* Implicit Association active task. */
 "IMPLICIT_ASSOCIATION_INTRODUCTION_TITLE_LABEL" = "Impliziter Assoziationstest";
-"IMPLICIT_ASSOCIATION_INTRODUCTION_TEXT_LABEL" = "Als Nächstes verwenden Sie eine linke und eine rechte Schaltfläche, um Elemente so schnell wie möglich in Gruppen zu kategorisieren. Dies sind die vier Gruppen und die Elemente, die zu jeder gehören:";
-"IMPLICIT_ASSOCIATION_INTRODUCTION_PARTS_LABEL" = "Es gibt sieben Phasen. Die Anweisungen ändern sich für jede Phasen. Passen Sie auf!";
+"IMPLICIT_ASSOCIATION_INTRODUCTION_TEXT_LABEL" = "In der nächsten Aufgabe wird Ihnen eine Anzahl von Wörtern oder Bildern (\"Items\") gezeigt, die Sie in Gruppen zuordnen sollen. Es ist wichtig, dass Sie dies so schnell und fehlerfrei wie möglich tun. Wenn Sie zu langsam vorgehen, oder zu viele Fehler machen, wird ihr Ergebnis nicht feststellbar sein. Dieser Teil der Studie wird ungefähr fünf Minuten dauern. Es folgt nun die Auflistung der Kategorien und der einzelnen Items, die zu den jeweiligen Kategorien gehören.";
+"IMPLICIT_ASSOCIATION_INTRODUCTION_PARTS_LABEL" = "Denken Sie daran\n
+• Legen Sie Ihre Zeigefinger auf die links und rechts unten angezeigten grünen Blöcke, um schnell reagieren zu können.\n
+• Zwei Hinweisfelder oben werden Ihnen zeigen, welche Wörter oder Bilder zu welcher Taste gehören.\n
+• Jedes Wort oder Bild hat eine korrekte Zuordnung. Meist sind diese sehr leicht.\n
+• Der Test wird kein Ergebnis rückmelden, wenn Sie zu langsam sind - bemühen Sie sich bitte, so schnell wie möglich zu reagieren.\n
+• Rechnen Sie damit, dass Sie ein paar Fehler machen werden, weil Sie zu schnell reagieren. Das ist kein Problem.\n
+• Um ein genaues Ergebnis zu erhalten, meiden Sie Ablenkungen und bleiben Sie konzentriert.";
 "IMPLICIT_ASSOCIATION_ITEM_DIVIDER" = "oder";
-"IMPLICIT_ASSOCIATION_HINT_LABEL" = "Wenn Sie einen Fehler machen, erscheint ein rotes <attention>X</attention>. Tippen Sie auf die andere Schaltfläche, um fortzufahren.";
+"IMPLICIT_ASSOCIATION_HINT_LABEL" = "Wenn Sie einen Fehler machen, wird ein rotes <attention>X</attention> angezeigt. Berühren Sie die andere Schaltfläche, um fortzufahren.";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_LEFT_LABEL1" = "linken";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_LEFT_LABEL2" = "linke";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_RIGHT_LABEL1" = "rechten";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_RIGHT_LABEL2" = "rechte";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_CONCEPTS_BLOCK1_LABEL" = "Legen Sie einen %@ Finger auf die <bold>%@</bold> Schaltfläche für Elemente, die zur Kategorie <concept>%@</concept> gehören.";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_CONCEPTS_BLOCK5_LABEL" = "Legen Sie den %@ Finger auf die <bold>%@</bold> Schaltfläche für <concept>%@</concept>.";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_ATTRIBUTES_LABEL" = "Legen Sie einen %@ Finger auf die <bold>%@</bold> Schaltfläche für Elemente, die zur Kategorie <attribute>%@</attribute> gehören.";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_COMBINED_LABEL" = "Nutzen Sie die <bold>%@</bold> Schaltfläche für <concept>%@</concept> und für <attribute>%@</attribute>.";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_CONCEPTS_BLOCK1_LABEL" = "Berühren Sie mit einem Finger der %@ Hand die <bold>%@</bold> Schaltfläche für Items der Kategorie <concept>%@</concept>.";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_CONCEPTS_BLOCK5_LABEL" = "Berühren Sie mit einem Finger der %@ Hand die <bold>%@</bold> Schaltfläche für Items der Kategorie <concept>%@</concept>.";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_SORTING_ATTRIBUTES_LABEL" = "Berühren Sie mit einen Finger der %@ Hand die <bold>%@</bold> Schaltfläche für Items der Kategorie <attribute>%@</attribute>.";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_COMBINED_LABEL" = "Berühren Sie mit einem Finger der %@ Hand die <bold>%@</bold> Schaltfläche für <concept>%@</concept>-Items und für <attribute>%@</attribute>.";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_EACH_LABEL" = "Jedes Element gehört nur einer Kategorie an.";
 "IMPLICIT_ASSOCIATION_INSTRUCTION_PREVIOUS_LABEL" = "Dies ist die gleiche wie die vorherige Phase.";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_APPEAR_LABEL" = "Elemente werden nacheinander angezeigt.";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_WATCH_LABEL" = "<bold>Achtung, die Beschriftungen haben ihre Position geändert!</bold>";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_GO_LABEL" = "<underline>Machen Sie so schnell Sie können</underline> während Sie genau sind.";
-"IMPLICIT_ASSOCIATION_INSTRUCTION_START_LABEL" = "Tippen Sie auf <bold>eine beliebige Schaltfläche</bold>, wenn Sie bereit sind zu starten.";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_APPEAR_LABEL" = "Es wird ein Item nach dem anderen angezeigt.";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_WATCH_LABEL" = "<bold>Achtung, die Seiten der Beschriftungen haben ihre Position geändert!</bold>";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_GO_LABEL" = "Führen Sie den Test so <underline>schnell</underline> und akurat wie möglich durch.";
+"IMPLICIT_ASSOCIATION_INSTRUCTION_START_LABEL" = "Berühren Sie <bold>eine beliebige Schaltfläche</bold> um anzufangen.";
 
 /* Potentially user visible error messages. */
 "ERROR_DATALOGGER_CREATE_FILE" = "Fehler beim Erstellen der Datei";
