fixing attribute side description

--- a/ResearchKit/Localized/de.lproj/ResearchKit.strings
+++ b/ResearchKit/Localized/de.lproj/ResearchKit.strings
@@ -588,7 +588,7 @@
 "IMPLICIT_ASSOCIATION_INTRODUCTION_TITLE_LABEL" = "Impliziter Assoziationstest";
 "IMPLICIT_ASSOCIATION_INTRODUCTION_TEXT_LABEL" = "In der nächsten Aufgabe wird Ihnen eine Anzahl von Wörtern oder Bildern (\"Items\") gezeigt, die Sie in Gruppen zuordnen sollen. Es ist wichtig, dass Sie dies so schnell und fehlerfrei wie möglich tun. Wenn Sie zu langsam vorgehen, oder zu viele Fehler machen, wird ihr Ergebnis nicht feststellbar sein. Dieser Teil der Studie wird ungefähr fünf Minuten dauern. Es folgt nun die Auflistung der Kategorien und der einzelnen Items, die zu den jeweiligen Kategorien gehören.";
 "IMPLICIT_ASSOCIATION_INTRODUCTION_PARTS_LABEL" = "Denken Sie daran\n
-• Legen Sie Ihre Zeigefinger auf die links und rechts unten angezeigten grünen Blöcke, um schnell reagieren zu können.\n
+• Halten Sie Ihre Zeigefinger über die links und rechts mittig angezeigten Schaltflächen, um schnell reagieren zu können.\n
 • Zwei Hinweisfelder oben werden Ihnen zeigen, welche Wörter oder Bilder zu welcher Taste gehören.\n
 • Jedes Wort oder Bild hat eine korrekte Zuordnung. Meist sind diese sehr leicht.\n
 • Der Test wird kein Ergebnis rückmelden, wenn Sie zu langsam sind - bemühen Sie sich bitte, so schnell wie möglich zu reagieren.\n
